<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:rowCount="@integer/num_row_count"
    android:columnCount="@integer/num_col_count">

    <Button
        android:id="@+id/number_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/one"/>

    <Button
        android:id="@+id/number_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/two"/>

    <Button
        android:id="@+id/number_three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/three"/>

    <Button
        android:id="@+id/number_four"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/four"/>

    <Button
        android:id="@+id/number_five"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/five"/>

    <Button
        android:id="@+id/number_six"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/six"/>

    <Button
        android:id="@+id/number_seven"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seven"/>

    <Button
        android:id="@+id/number_eight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eight"/>

    <Button
        android:id="@+id/number_nine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nine"/>

    <Button
        android:id="@+id/backspace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/u232b"/>

    <Button
        android:id="@+id/number_zero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"/>

    <Button
        android:id="@+id/decimal_point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/decimal_point"/>
</GridLayout>